<resources>
    <string name="app_name">QuizWyzwanie</string>
    <string name="fragment_menu_user_title">Your username:</string>
    <string name="fragment_menu_user_name_placeholder">username placeholder</string>
    <string name="fragment_menu_new_game_btn_text">New game</string>
    <string name="fragment_menu_result_placeholder">1 - 1</string>
    <string name="fragment_menu_surrender_text">Surrender</string>
    <string name="fragment_menu_play_text">Play</string>
    <string name="fragment_category_title_text">Choose category:</string>
    <string name="fragment_category_name_placeholder">CATEGORY</string>
    <string name="entry_games_state_waiting">Waiting for %1$s move!</string>
    <string name="entry_games_state_finished">Your game with %1$s is finished!</string>
    <string name="entry_games_state_your_turn">Your turn!</string>
    <string name="loading">Loading...</string>
    <string name="waiting_initialize">Please wait - initializing data is not finished.</string>
    <string name="waiting_for_opponent">Please wait - now your opponent\'s turn.</string>
</resources>
