<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/fragment_menu_user_icon_size"
            android:layout_height="@dimen/fragment_menu_user_icon_size"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <pl.polsl.quizwyzwanie.views.QuizTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text_size"
                android:layout_marginLeft="@dimen/normal_margin"
                android:text="@string/fragment_menu_user_title"/>

            <pl.polsl.quizwyzwanie.views.QuizTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_text_size"
                android:id="@+id/fragment_menu_username_tv"
                android:layout_marginLeft="@dimen/normal_margin"
                android:text="@string/fragment_menu_user_name_placeholder"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:text="@string/fragment_menu_new_game_btn_text"
        android:id="@+id/fragment_menu_new_game_btn"
        android:layout_margin="@dimen/normal_margin"
        android:layout_height="@dimen/fragment_menu_new_game_button_height" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/normal_margin"
        android:id="@+id/fragment_menu_games_rv"
        android:layout_height="match_parent"/>

</LinearLayout>